--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,42 +1,65 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+html, body {
+  min-height: 100%; 
+  margin: 0;
+  padding: 0;
+  background-image: radial-gradient(circle at center, #e8adc7, #f1d28d);
+  transition: font-size 0.5s ease;
+}
+
+
+.content{
+  display: flex;
+  justify-content: space-between; 
+  align-items: flex-start;
+  width: 100%; 
+}
+
+.content .cardscontent{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 0rem; 
   text-align: center;
+  justify-items: center;
+  align-items: center; 
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+
+
+@media (max-width:1200px){
+  html{
+    font-size: 90%;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.content .cardscontent{
+  grid-template-columns: 2fr;
+ }
+ .content{
+  flex-direction: column;
+ }
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+
+@media (max-width:991px){
+  html{
+    font-size: 75%;
+}
+.content .cardscontent{
+  grid-template-columns: 1fr;
+ }
+ .content{
+  flex-direction: column;
+ }
+}
+
+@media (max-width:786px){
+  html{
+      font-size: 65%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .content .cardscontent{
+  grid-template-columns: 1fr;
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+ .content{
+  flex-direction: column;
+ }
 }
