--- a/vite-project/src/components/Cards.css
+++ b/vite-project/src/components/Cards.css
@@ -1,213 +1,131 @@
-.area{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 1rem;
-    justify-content: center; 
-    width: 100%;
-    padding: 1rem 0;
-    margin-left: 2rem;
-   
+.area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem 0;
+  margin-left: 2rem;
+  padding-top: 2rem;
 }
 
-.cards{
-    position: relative;
-    width: 24rem;
-    height: 24rem;
-    transform-style: preserve-3d;
-    transition: transform 0.8s ease;
-    margin-bottom: 1rem;
-    margin-left: 5rem;
-    margin-top: 1rem; 
-    grid-template-columns: repeat(2, 1fr);
-    font-family: "Poppins", sans-serif;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 3rem;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-
+.heart-empty {
+  color: rgba(255, 255, 255, 0) fff;
+  width: 3rem;
+  height: 3rem;
+  margin-top: -1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.cards:hover{
-    transform: rotateY(180deg);
+.heart-filled {
+  color: rgb(191, 81, 81);
+  width: 3rem;
+  height: 3rem;
+  margin-top: -1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.cards .thefront{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display:flex;
-    list-style-type: none;
-    text-align:center;
-    backface-visibility: hidden;
-    
-  }
-  .cards .thefront  ul {
-    flex: 1 1 48%; 
-    grid-template-columns: repeat(2, 1fr);
-    padding: 0;
-    margin: 0;
-    
-  }
-
-
-  .cards .thefront h3{
-    font-size: 1vw;
-    font-weight:900;
-  }
-
-  .cards  .thefront p{
-    font-size: 0.8vw;
-    font-weight: 800;
-  }
-  
-  .cards .thefront h3,p{  
-    margin:1rem;
-  }
-
-  .cards .thefront img{
-    width: 15rem;
-    height: 15rem;
-    border-radius: 3rem;
-    
-  }
-
-  .area  audio::-webkit-media-controls-panel {
-    background-color: #f1ac88;
- 
-  }
-
-.area audio{
-    margin-top: 0rem;
-    margin-left: 4.7rem;
-
+.cards {
+  position: relative;
+  width: 24rem;
+  height: 24rem;
+  margin-bottom: 1rem;
+  margin-left: 5rem;
+  margin-top: 1.5rem;
+  grid-template-columns: repeat(2, 1fr);
+  font-family: "Poppins", sans-serif;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 3rem;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-  .cards .theback{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display:flex;
-    list-style-type: none;
-    text-align:center;
-    backface-visibility: hidden;
-    transform: rotateY(180deg);
-    flex-direction:column ;
-  }
+.cards .thefront {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  list-style-type: none;
+  text-align: center;
+  align-items: center;
+}
 
-  .cards .theback h3{
-    font-size: 2rem;
-    margin-bottom:0rem;
-    margin-top: 0.3rem;
-  }
+.cards .thefront ul {
+  flex: 1 1 48%;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0;
+  margin: 0;
+}
 
-  .cards .theback p{
-    font-size: 1rem;
-    font-weight: 600;
-    background-blend-mode: darken;
-    border-radius: 2rem;
-  }
+.cards .thefront ul,
+li {
+  list-style-type: none;
+  font-size: 1.5rem;
+}
 
- .cards .thefront ul, li{
-    list-style-type: none;
- }
+.cards .thefront h3 {
+  font-size: 1.7rem;
+  font-weight: 900;
+}
 
-  @media (max-width:1200px){
-    .cards{
-        margin-left: 4rem;
-        width:50rem;
-        height: 50rem;
-        }
-        .cards .thefront img{
-         width: 35rem;
-         height: 35rem;
-        }
-       .cards .thefront h3{
-        font-size: 3rem;
-       }
-       .cards .thefront p{
-        font-size: 2rem;
-        
-       }
-       .cards .theback h3{
-        font-size: 3rem;
-       }
-       .cards .theback p{
-        font-size: 2rem;
-       }
-       .area audio{
-       width: 100%;
-       max-width: 50rem;
-    
-    }
-  }
+.cards .thefront p {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
 
-  @media (max-width: 991px) {
-   
-    .cards{
+.cards .thefront h3,
+p {
+  margin: 0rem;
+}
+
+@media (max-width: 1200px) {
+  .cards {
     margin-left: 4rem;
-    width:50rem;
+    width: 50rem;
     height: 50rem;
-    }
-    .cards .thefront img{
-     width: 35rem;
-     height: 35rem;
-    }
-   .cards .thefront h3{
-    font-size: 3rem;
-   }
-   .cards .thefront p{
-    font-size: 2rem;
-    
-   }
-   .cards .theback h3{
-    font-size: 3rem;
-   }
-   .cards .theback p{
-    font-size: 2rem;
-   }
-   .area audio{
-   width: 100%;
-   max-width: 50rem;
+  }
 
+  .cards .thefront h3 {
+    font-size: 4rem;
+  }
+  .cards .thefront p {
+    font-size: 3rem;
+  }
 }
 
+@media (max-width: 991px) {
+  .cards {
+    margin-left: 4rem;
+    width: 50rem;
+    height: 50rem;
+  }
+
+  .cards .thefront h3 {
+    font-size: 4rem;
+  }
+  .cards .thefront p {
+    font-size: 3rem;
+  }
 }
 
-@media (max-width:768px){
-  
-    .area {
-        margin-left: 0;
-      }
-    
-      .cards {
-        width: 40rem;
-        height: 40rem;
-        margin-left: 0rem;
-      }
-    
-      .cards .thefront img {
-        width: 80%;
-        height: auto;
-      }
-    
-      .cards .thefront h3 {
-        font-size: 3rem;
-      }
-    
-      .cards .thefront p {
-        font-size: 2rem;
-      }
-    
-      .cards .theback h3 {
-        font-size: 3rem;
-      }
-    
-      .cards .theback p {
-        font-size: 2rem;
-      }
-      .area audio{
-        width: 100%;
-        max-width: 20rem;
-     
-     }
-    }
+@media (max-width: 768px) {
+  .area {
+    margin-left: 0;
+  }
+
+  .cards {
+    width: 40rem;
+    height: 40rem;
+    margin-left: 0rem;
+  }
+
+  .cards .thefront h3 {
+    font-size: 3.5rem;
+  }
+
+  .cards .thefront p {
+    font-size: 3rem;
+  }
+}
