--- a/vite-project/src/components/Form.css
+++ b/vite-project/src/components/Form.css
@@ -1,151 +1,141 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .container {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 56.25rem;
-    height: 59.3rem;
-    font-family: "Poppins", sans-serif;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 4rem;
-    margin-left: 10rem;
-    margin-top:2.5rem;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 56.25rem;
+  height: 59.3rem;
+  font-family: "Poppins", sans-serif;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4rem;
+  margin-left: 10rem;
+  margin-top: 2.5rem;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-
-.container h3{
-    font-size: 3rem;
-    margin-bottom: 0.5rem;
-    
+.container h3 {
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
 }
-.container p{
-    margin-top: 1rem;
-    font-size: 2rem;
-    font-weight: 500;
+.container p {
+  margin-top: -1rem;
+  font-size: 2rem;
+  font-weight: 500;
 }
-.container form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1rem;
+.container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
-.container form label{
-    font-weight: bold;
-    font-size: 1.5rem;
-    text-decoration: none;
-    display: block;
-    margin-bottom: 0.1rem;
-
+.container form label {
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 0.1rem;
 }
 
 .container form input {
-    width: 38rem;
-    height: 2.5rem;
-    font-size: 1.5rem;
+  width: 38rem;
+  height: 2.5rem;
+  font-size: 1.5rem;
   padding: 0.5rem;
   margin-bottom: 1rem;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
 }
 
-.container form select{
-    width: 39rem;
-    height: 4rem; 
-    font-size: 1.5rem;
+.container form select {
+  width: 39rem;
+  height: 4rem;
+  font-size: 1.5rem;
   padding: 0.5rem;
   margin-bottom: 1rem;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
 }
+
 .container form .buttons {
-    display: flex;
-    align-items: center;
-   
-}
-.container form .btn{
-    width: 32rem;
-    height: 4rem; 
-    padding: 0.75rem 1.5rem;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: 2rem;
-    margin-bottom: 3rem;
-    margin-right: 10px;
-    transition: transform 0.3s ease 0s;
-    background-color: #f1ac88;
+  display: flex;
+  align-items: center;
 }
 
-
-.container form .btn:hover{
-    background-color:#ff8db8;
-    transform: translateY(-5px);
-    
+.container form .btn {
+  width: 32rem;
+  height: 4rem;
+  padding: 0.75rem 1.5rem;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+  margin-right: 10px;
+  transition: transform 0.3s ease 0s;
+  background-color: #f1ac88;
 }
 
-.container form  .button{
-    transition: transform 0.3s ease 0s;
+.container form .btn:hover {
+  background-color: #ff8db8;
+  transform: translateY(-5px);
 }
 
-.container form  .button:hover{
-    background-color:#ff8db8;
-    transform: translateY(-5px);
-   color: #fff;
+.container form .button {
+  transition: transform 0.3s ease 0s;
 }
 
+.container form .button:hover {
+  background-color: #ff8db8;
+  transform: translateY(-5px);
+  color: #fff;
+}
 
-@media (max-width:1200px){
-    .container{
-        margin-left: 7rem;
-        margin-top: 3rem;
-          }
+@media (max-width: 1200px) {
+  .container {
+    margin-left: 7rem;
+    margin-top: 3rem;
   }
-  
-
+}
 
 @media (max-width: 991px) {
-   
-    .container{
-  margin-left: 7rem;
-  margin-top: 3rem;
-    }
-
+  .container {
+    margin-left: 7rem;
+    margin-top: 3rem;
+  }
 }
 
-@media (max-width:768px){
- 
-    .container {
-        width: 80%;
-        margin-right: -7rem;
-      }
-    
-      .container h3 {
-        font-size: 2.5rem;
-      }
-    
-      .container p {
-        font-size: 1.8rem;
-      }
-    
-      .container form input {
-        width: 90%;
-      }
-    
-      .container form select {
-        width: 90%;
-      }
-    
-      .container form .btn {
-        width: 90%;
-        margin-top: 2rem;
-      }
+@media (max-width: 768px) {
+  .container {
+    width: 80%;
+    margin-right: -7rem;
   }
+
+  .container h3 {
+    font-size: 2.5rem;
+  }
+
+  .container p {
+    font-size: 1.8rem;
+  }
+
+  .container form input {
+    width: 90%;
+  }
+
+  .container form select {
+    width: 90%;
+  }
+
+  .container form .btn {
+    width: 90%;
+    margin-top: 2rem;
+  }
+}
